--- a/selenium/sel.ipynb
+++ b/selenium/sel.ipynb
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "fc69656c",
    "metadata": {},
    "outputs": [
@@ -404,12 +404,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CSV saving functions created!\n"
+      "CSV saving functions updated! Data will be saved to 'sel_scrapped_data' folder.\n"
      ]
     }
    ],
    "source": [
-    "def save_to_csv(data, filename, output_dir=\"../scraped_data\"):\n",
+    "def save_to_csv(data, filename, output_dir=\"sel_scrapped_data\"):\n",
     "    \"\"\"\n",
     "    Save scraped data to CSV file\n",
     "    \"\"\"\n",
@@ -454,7 +454,7 @@
     "    \n",
     "    return results\n",
     "\n",
-    "print(\"CSV saving functions created!\")"
+    "print(\"CSV saving functions updated! Data will be saved to 'sel_scrapped_data' folder.\")"
    ]
   },
   {
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "942d1766",
    "metadata": {},
    "outputs": [
@@ -675,7 +675,7 @@
     "]\n",
     "\n",
     "for filename, title in csv_files:\n",
-    "    filepath = os.path.join(\"../scraped_data\", filename)\n",
+    "    filepath = os.path.join(\"sel_scrapped_data\", filename)\n",
     "    if os.path.exists(filepath):\n",
     "        print(f\"\\n📄 {title}:\")\n",
     "        print(\"-\" * 30)\n",
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "96dcc035",
    "metadata": {},
    "outputs": [
@@ -779,6 +779,17 @@
       "✅ Webscraping completed successfully!\n",
       "🔍 You can now analyze the CSV files for further insights.\n"
      ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
@@ -800,7 +811,7 @@
     "total_records = 0\n",
     "\n",
     "for filename, title in csv_files:\n",
-    "    filepath = os.path.join(\"../scraped_data\", filename)\n",
+    "    filepath = os.path.join(\"sel_scrapped_data\", filename)\n",
     "    if os.path.exists(filepath):\n",
     "        df = pd.read_csv(filepath)\n",
     "        print(f\"{title}: {len(df)} records\")\n",
@@ -814,7 +825,7 @@
     "        print()\n",
     "\n",
     "print(f\"📊 Total Records Scraped: {total_records}\")\n",
-    "print(f\"📁 Data saved in: ../scraped_data/ folder\")\n",
+    "print(f\"📁 Data saved in: sel_scrapped_data/ folder\")\n",
     "print()\n",
     "print(\"✅ Webscraping completed successfully!\")\n",
     "print(\"🔍 You can now analyze the CSV files for further insights.\")"
